// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getOrganizedAttributes Ensure getOrganizedAttributes and cleanStyleAttributes work correctly 1`] = `
Object {
  "advanced": Object {
    "flex": Object {
      "attribute": Object {
        "column-gap-unit-general": "px",
        "flex-basis-unit-general": "px",
        "row-gap-unit-general": "px",
      },
      "label": "Flexbox",
    },
    "position": Object {
      "attribute": Object {
        "position-sync-general": "all",
        "position-unit-general": "px",
      },
      "label": "Position",
    },
    "scroll": Object {
      "attribute": Object {
        "scroll-blur-blur-end-general": 0,
        "scroll-blur-blur-mid-general": 0,
        "scroll-blur-blur-start-general": 10,
        "scroll-blur-delay-general": 0,
        "scroll-blur-easing-general": "ease",
        "scroll-blur-preview-status-general": false,
        "scroll-blur-speed-general": 500,
        "scroll-blur-status-general": false,
        "scroll-blur-status-reverse-general": true,
        "scroll-blur-viewport-top-general": "mid",
        "scroll-fade-delay-general": 0,
        "scroll-fade-easing-general": "ease",
        "scroll-fade-opacity-end-general": 100,
        "scroll-fade-opacity-mid-general": 100,
        "scroll-fade-opacity-start-general": 0,
        "scroll-fade-preview-status-general": false,
        "scroll-fade-speed-general": 500,
        "scroll-fade-status-general": false,
        "scroll-fade-status-reverse-general": true,
        "scroll-fade-viewport-top-general": "mid",
        "scroll-horizontal-delay-general": 0,
        "scroll-horizontal-easing-general": "ease",
        "scroll-horizontal-offset-end-general": 200,
        "scroll-horizontal-offset-mid-general": 0,
        "scroll-horizontal-offset-start-general": -200,
        "scroll-horizontal-preview-status-general": false,
        "scroll-horizontal-speed-general": 500,
        "scroll-horizontal-status-general": false,
        "scroll-horizontal-status-reverse-general": true,
        "scroll-horizontal-viewport-top-general": "mid",
        "scroll-rotate-delay-general": 0,
        "scroll-rotate-easing-general": "ease",
        "scroll-rotate-preview-status-general": false,
        "scroll-rotate-rotate-end-general": 0,
        "scroll-rotate-rotate-mid-general": 0,
        "scroll-rotate-rotate-start-general": 90,
        "scroll-rotate-speed-general": 500,
        "scroll-rotate-status-general": false,
        "scroll-rotate-status-reverse-general": true,
        "scroll-rotate-viewport-top-general": "mid",
        "scroll-scale-delay-general": 0,
        "scroll-scale-easing-general": "ease",
        "scroll-scale-preview-status-general": false,
        "scroll-scale-scale-end-general": 100,
        "scroll-scale-scale-mid-general": 100,
        "scroll-scale-scale-start-general": 70,
        "scroll-scale-speed-general": 500,
        "scroll-scale-status-general": false,
        "scroll-scale-status-reverse-general": true,
        "scroll-scale-viewport-top-general": "mid",
        "scroll-vertical-delay-general": 0,
        "scroll-vertical-easing-general": "ease",
        "scroll-vertical-offset-end-general": 400,
        "scroll-vertical-offset-mid-general": 0,
        "scroll-vertical-offset-start-general": -400,
        "scroll-vertical-preview-status-general": false,
        "scroll-vertical-speed-general": 500,
        "scroll-vertical-status-general": false,
        "scroll-vertical-status-reverse-general": true,
        "scroll-vertical-viewport-top-general": "mid",
        "shortcutEffect": 0,
      },
      "label": "Scroll",
    },
    "transform": Object {
      "attribute": Object {
        "transform-origin-x-unit-general": "%",
        "transform-origin-y-unit-general": "%",
        "transform-scale-x-general": 65,
        "transform-scale-y-general": 110,
        "transform-translate-x-unit-general": "%",
        "transform-translate-y-unit-general": "%",
      },
      "label": "Transform",
    },
  },
  "canvas": Object {
    "blockBackground": Object {
      "attribute": Object {
        "block-background-hover-status": false,
      },
      "label": "Background",
    },
    "border": Object {
      "group": Object {
        "border": Object {
          "attribute": Object {
            "border-palette-color-general": 2,
            "border-palette-status-general": true,
          },
          "label": "Border",
        },
        "borderHover": Object {
          "attribute": Object {
            "border-palette-color-general-hover": 6,
            "border-palette-status-general-hover": true,
            "border-status-hover": false,
          },
          "label": "Border hover",
        },
        "borderRadius": Object {
          "attribute": Object {
            "border-sync-radius-general": "all",
            "border-unit-radius-general": "px",
          },
          "label": "Border radius",
        },
        "borderRadiusHover": Object {
          "attribute": Object {
            "border-unit-radius-general-hover": "px",
          },
          "label": "Border radius hover",
        },
        "borderWidth": Object {
          "attribute": Object {
            "border-bottom-width-general": 2,
            "border-left-width-general": 2,
            "border-right-width-general": 2,
            "border-sync-width-general": "all",
            "border-top-width-general": 2,
            "border-unit-width-general": "px",
          },
          "label": "Border width",
        },
      },
      "label": "Border",
    },
    "boxShadow": Object {
      "group": Object {
        "boxShadow": Object {
          "attribute": Object {
            "box-shadow-blur-general": 50,
            "box-shadow-horizontal-general": 0,
            "box-shadow-palette-color-general": 5,
            "box-shadow-palette-opacity-general": 0.23,
            "box-shadow-palette-status-general": true,
            "box-shadow-spread-general": 0,
            "box-shadow-vertical-general": 30,
          },
          "label": "Box shadow",
        },
        "boxShadowHover": Object {
          "attribute": Object {
            "box-shadow-palette-color-general-hover": 6,
            "box-shadow-status-hover": false,
          },
          "label": "Box shadow hover",
        },
      },
      "label": "Box shadow",
    },
    "margin-padding": Object {
      "group": Object {
        "margin": Object {
          "attribute": Object {
            "margin-bottom-unit-general": "px",
            "margin-left-unit-general": "px",
            "margin-right-unit-general": "px",
            "margin-sync-general": "all",
            "margin-top-unit-general": "px",
          },
          "label": "Margin",
        },
        "padding": Object {
          "attribute": Object {
            "padding-bottom-unit-general": "px",
            "padding-left-unit-general": "px",
            "padding-right-unit-general": "px",
            "padding-sync-general": "all",
            "padding-top-unit-general": "px",
          },
          "label": "Padding",
        },
      },
      "label": "Margin/Padding",
    },
    "size": Object {
      "group": Object {
        "blockFullWidth": Object {
          "attribute": Object {
            "blockFullWidth": "normal",
          },
          "label": "Full width",
        },
        "size": Object {
          "attribute": Object {
            "height-unit-general": "px",
            "max-height-unit-general": "px",
            "max-width-unit-general": "px",
            "min-height-unit-general": "px",
            "min-width-unit-general": "px",
            "size-advanced-options": false,
            "width-fit-content-general": false,
            "width-unit-general": "px",
          },
          "label": "Size",
        },
      },
      "label": "Size",
    },
  },
  "settings": Object {
    "alignment": Object {
      "attribute": Object {
        "alignment-general": "right",
      },
      "label": "Alignment",
    },
    "border": Object {
      "group": Object {
        "border": Object {
          "attribute": Object {
            "image-border-palette-color-general": 7,
            "image-border-palette-status-general": true,
            "image-border-style-general": "dashed",
          },
          "label": "Border",
        },
        "borderHover": Object {
          "attribute": Object {
            "image-border-palette-color-general-hover": 4,
            "image-border-palette-status-general-hover": true,
            "image-border-status-hover": true,
            "image-border-style-general-hover": "dashed",
          },
          "label": "Border hover",
        },
        "borderRadius": Object {
          "attribute": Object {
            "image-border-bottom-left-radius-general": 71,
            "image-border-bottom-right-radius-general": 71,
            "image-border-sync-radius-general": "all",
            "image-border-top-left-radius-general": 71,
            "image-border-top-right-radius-general": 71,
            "image-border-unit-radius-general": "px",
          },
          "label": "Border radius",
        },
        "borderRadiusHover": Object {
          "attribute": Object {
            "image-border-bottom-left-radius-general-hover": 71,
            "image-border-bottom-right-radius-general-hover": 71,
            "image-border-sync-radius-general-hover": "all",
            "image-border-top-left-radius-general-hover": 71,
            "image-border-top-right-radius-general-hover": 71,
            "image-border-unit-radius-general-hover": "px",
          },
          "label": "Border radius hover",
        },
        "borderWidth": Object {
          "attribute": Object {
            "image-border-bottom-width-general": 3,
            "image-border-left-width-general": 3,
            "image-border-right-width-general": 3,
            "image-border-sync-width-general": "all",
            "image-border-top-width-general": 3,
            "image-border-unit-width-general": "px",
          },
          "label": "Border width",
        },
        "borderWidthHover": Object {
          "attribute": Object {
            "image-border-bottom-width-general-hover": 3,
            "image-border-left-width-general-hover": 3,
            "image-border-right-width-general-hover": 3,
            "image-border-sync-width-general-hover": "all",
            "image-border-top-width-general-hover": 3,
            "image-border-unit-width-general-hover": "px",
          },
          "label": "Border width hover",
        },
      },
      "label": "Border",
    },
    "boxShadow": Object {
      "group": Object {
        "boxShadow": Object {
          "attribute": Object {
            "image-box-shadow-palette-color-general": 8,
            "image-box-shadow-palette-status-general": true,
          },
          "label": "Box shadow",
        },
        "boxShadowHover": Object {
          "attribute": Object {
            "image-box-shadow-palette-color-general-hover": 6,
            "image-box-shadow-status-hover": false,
          },
          "label": "Box shadow hover",
        },
      },
      "label": "Box shadow",
    },
    "caption": Object {
      "group": Object {
        "caption-gap": Object {
          "attribute": Object {
            "caption-gap-general": 2,
          },
          "label": "Caption gap",
        },
        "caption-gap-unit": Object {
          "attribute": Object {
            "caption-gap-unit-general": "em",
          },
          "label": "Caption gap unit",
        },
        "captionContent": Object {
          "attribute": Object {
            "captionContent": "Basket Ball",
          },
          "label": "Caption content",
        },
        "captionPosition": Object {
          "attribute": Object {
            "captionPosition": "bottom",
          },
          "label": "Caption position",
        },
        "captionType": Object {
          "attribute": Object {
            "captionType": "custom",
          },
          "label": "Caption type",
        },
        "link": Object {
          "attribute": Object {
            "link-active-palette-color-general": 6,
            "link-active-palette-status-general": true,
            "link-hover-palette-color-general": 6,
            "link-hover-palette-status-general": true,
            "link-palette-color-general": 4,
            "link-palette-status-general": true,
            "link-visited-palette-color-general": 6,
            "link-visited-palette-status-general": true,
          },
          "label": "Link",
        },
        "textAlignment": Object {
          "attribute": Object {
            "text-alignment-general": "center",
          },
          "label": "Text alignment",
        },
        "typography": Object {
          "attribute": Object {
            "font-size-unit-general": "px",
            "letter-spacing-unit-general": "px",
            "line-height-unit-general": "px",
            "palette-color-general": 3,
            "palette-status-general": true,
            "text-indent-unit-general": "px",
          },
          "label": "Typography",
        },
      },
      "label": "Caption",
    },
    "clipPath": Object {
      "attribute": Object {
        "clip-path-status-general": false,
      },
      "label": "Clip path",
    },
    "dimension": Object {
      "group": Object {
        "imageRatio": Object {
          "attribute": Object {
            "imageRatio": "original",
          },
          "label": "Image ratio",
        },
        "imgWidth": Object {
          "attribute": Object {
            "imgWidth": 82,
          },
          "label": "Image width",
        },
      },
      "label": "Dimension",
    },
    "hoverEffects": Object {
      "group": Object {
        "hover": Object {
          "attribute": Object {
            "hover-basic-blur-value": 2,
            "hover-basic-effect-type": "zoom-in",
            "hover-basic-rotate-value": 15,
            "hover-basic-slide-value": 30,
            "hover-basic-zoom-in-value": 1.3,
            "hover-basic-zoom-out-value": 1.5,
            "hover-extension": false,
            "hover-preview": true,
            "hover-text-effect-type": "fade",
            "hover-text-preset": "center-center",
            "hover-transition-duration": 0.5,
            "hover-transition-easing": "easing",
            "hover-type": "none",
          },
          "label": "Hover",
        },
        "hoverBackground": Object {
          "attribute": Object {
            "hover-background-status": false,
          },
          "label": "Hover background",
        },
        "hoverBackgroundColor": Object {
          "attribute": Object {
            "hover-background-color-clip-path-status-general": false,
            "hover-background-palette-color-general": 1,
            "hover-background-palette-status-general": true,
          },
          "label": "Hover background color",
        },
        "hoverBackgroundGradient": Object {
          "attribute": Object {
            "hover-background-gradient-clip-path-status-general": false,
            "hover-background-gradient-opacity-general": 1,
          },
          "label": "Hover background gradient",
        },
        "hoverBorder": Object {
          "attribute": Object {
            "hover-border-palette-color-general": 2,
            "hover-border-palette-status-general": true,
            "hover-border-status": false,
          },
          "label": "Hover border",
        },
        "hoverBorderRadius": Object {
          "attribute": Object {
            "hover-border-sync-radius-general": "all",
            "hover-border-unit-radius-general": "px",
          },
          "label": "Hover border radius",
        },
        "hoverBorderWidth": Object {
          "attribute": Object {
            "hover-border-bottom-width-general": 2,
            "hover-border-left-width-general": 2,
            "hover-border-right-width-general": 2,
            "hover-border-sync-width-general": "all",
            "hover-border-top-width-general": 2,
            "hover-border-unit-width-general": "px",
          },
          "label": "Hover border width",
        },
        "hoverContentTypography": Object {
          "attribute": Object {
            "hover-content-font-size-general": 18,
            "hover-content-font-size-unit-general": "px",
            "hover-content-letter-spacing-unit-general": "px",
            "hover-content-line-height-unit-general": "px",
            "hover-content-palette-color-general": 1,
            "hover-content-palette-status-general": true,
            "hover-content-text-indent-unit-general": "px",
            "hover-content-typography-content": "Add your Hover Title here",
            "hover-content-typography-status": false,
          },
          "label": "Hover content typography",
        },
        "hoverMargin": Object {
          "attribute": Object {
            "hover-margin-bottom-unit-general": "px",
            "hover-margin-left-unit-general": "px",
            "hover-margin-right-unit-general": "px",
            "hover-margin-status": false,
            "hover-margin-sync-general": "all",
            "hover-margin-top-unit-general": "px",
          },
          "label": "Hover margin",
        },
        "hoverPadding": Object {
          "attribute": Object {
            "hover-padding-bottom-unit-general": "px",
            "hover-padding-left-unit-general": "px",
            "hover-padding-right-unit-general": "px",
            "hover-padding-status": false,
            "hover-padding-sync-general": "all",
            "hover-padding-top-unit-general": "px",
          },
          "label": "Hover padding",
        },
        "hoverTitleTypography": Object {
          "attribute": Object {
            "hover-title-font-size-general": 30,
            "hover-title-font-size-unit-general": "px",
            "hover-title-letter-spacing-unit-general": "px",
            "hover-title-line-height-unit-general": "px",
            "hover-title-palette-color-general": 1,
            "hover-title-palette-status-general": true,
            "hover-title-text-indent-unit-general": "px",
            "hover-title-typography-content": "Add your Hover Title here",
            "hover-title-typography-status": false,
          },
          "label": "Hover title typography",
        },
      },
      "label": "Hover effects",
    },
    "mediaAlt": Object {
      "attribute": Object {
        "altSelector": "title",
        "mediaAlt": "ball",
      },
      "label": "Alt tag",
    },
    "mediaID": Object {
      "attribute": Object {
        "isImageUrl": false,
        "mediaAlt": "ball",
        "mediaHeight": 225,
        "mediaID": 22,
        "mediaURL": "http://localhost:8888/wp-content/uploads/2022/04/ball.jpg",
        "mediaWidth": 225,
      },
      "label": "Image",
    },
    "padding": Object {
      "attribute": Object {
        "image-padding-bottom-unit-general": "px",
        "image-padding-left-unit-general": "px",
        "image-padding-right-unit-general": "px",
        "image-padding-sync-general": "all",
        "image-padding-top-unit-general": "px",
      },
      "label": "Padding",
    },
    "size": Object {
      "group": Object {
        "fullWidth": Object {
          "attribute": Object {
            "fullWidth": "normal",
          },
          "label": "Full width",
        },
        "size": Object {
          "attribute": Object {
            "image-height-unit-general": "px",
            "image-max-height-unit-general": "px",
            "image-max-width-unit-general": "px",
            "image-min-height-unit-general": "px",
            "image-min-width-unit-general": "px",
            "image-size-advanced-options": false,
            "image-width-fit-content-general": false,
            "image-width-unit-general": "px",
          },
          "label": "Size",
        },
      },
      "label": "Size",
    },
  },
}
`;

exports[`getOrganizedAttributes Ensure getOrganizedAttributes and cleanStyleAttributes work correctly 2`] = `
Object {
  "alignment-general": "right",
  "altSelector": "title",
  "block-background-hover-status": false,
  "blockFullWidth": "normal",
  "border-bottom-width-general": 2,
  "border-left-width-general": 2,
  "border-palette-color-general": 2,
  "border-palette-color-general-hover": 6,
  "border-palette-status-general": true,
  "border-palette-status-general-hover": true,
  "border-right-width-general": 2,
  "border-status-hover": false,
  "border-sync-radius-general": "all",
  "border-sync-width-general": "all",
  "border-top-width-general": 2,
  "border-unit-radius-general": "px",
  "border-unit-radius-general-hover": "px",
  "border-unit-width-general": "px",
  "box-shadow-blur-general": 50,
  "box-shadow-horizontal-general": 0,
  "box-shadow-palette-color-general": 5,
  "box-shadow-palette-color-general-hover": 6,
  "box-shadow-palette-opacity-general": 0.23,
  "box-shadow-palette-status-general": true,
  "box-shadow-spread-general": 0,
  "box-shadow-status-hover": false,
  "box-shadow-vertical-general": 30,
  "caption-gap-general": 2,
  "caption-gap-unit-general": "em",
  "captionContent": "Basket Ball",
  "captionPosition": "bottom",
  "captionType": "custom",
  "clip-path-status-general": false,
  "column-gap-unit-general": "px",
  "flex-basis-unit-general": "px",
  "font-size-unit-general": "px",
  "fullWidth": "normal",
  "height-unit-general": "px",
  "hover-background-color-clip-path-status-general": false,
  "hover-background-gradient-clip-path-status-general": false,
  "hover-background-gradient-opacity-general": 1,
  "hover-background-palette-color-general": 1,
  "hover-background-palette-status-general": true,
  "hover-background-status": false,
  "hover-basic-blur-value": 2,
  "hover-basic-effect-type": "zoom-in",
  "hover-basic-rotate-value": 15,
  "hover-basic-slide-value": 30,
  "hover-basic-zoom-in-value": 1.3,
  "hover-basic-zoom-out-value": 1.5,
  "hover-border-bottom-width-general": 2,
  "hover-border-left-width-general": 2,
  "hover-border-palette-color-general": 2,
  "hover-border-palette-status-general": true,
  "hover-border-right-width-general": 2,
  "hover-border-status": false,
  "hover-border-sync-radius-general": "all",
  "hover-border-sync-width-general": "all",
  "hover-border-top-width-general": 2,
  "hover-border-unit-radius-general": "px",
  "hover-border-unit-width-general": "px",
  "hover-content-font-size-general": 18,
  "hover-content-font-size-unit-general": "px",
  "hover-content-letter-spacing-unit-general": "px",
  "hover-content-line-height-unit-general": "px",
  "hover-content-palette-color-general": 1,
  "hover-content-palette-status-general": true,
  "hover-content-text-indent-unit-general": "px",
  "hover-content-typography-content": "Add your Hover Title here",
  "hover-content-typography-status": false,
  "hover-extension": false,
  "hover-margin-bottom-unit-general": "px",
  "hover-margin-left-unit-general": "px",
  "hover-margin-right-unit-general": "px",
  "hover-margin-status": false,
  "hover-margin-sync-general": "all",
  "hover-margin-top-unit-general": "px",
  "hover-padding-bottom-unit-general": "px",
  "hover-padding-left-unit-general": "px",
  "hover-padding-right-unit-general": "px",
  "hover-padding-status": false,
  "hover-padding-sync-general": "all",
  "hover-padding-top-unit-general": "px",
  "hover-preview": true,
  "hover-text-effect-type": "fade",
  "hover-text-preset": "center-center",
  "hover-title-font-size-general": 30,
  "hover-title-font-size-unit-general": "px",
  "hover-title-letter-spacing-unit-general": "px",
  "hover-title-line-height-unit-general": "px",
  "hover-title-palette-color-general": 1,
  "hover-title-palette-status-general": true,
  "hover-title-text-indent-unit-general": "px",
  "hover-title-typography-content": "Add your Hover Title here",
  "hover-title-typography-status": false,
  "hover-transition-duration": 0.5,
  "hover-transition-easing": "easing",
  "hover-type": "none",
  "image-border-bottom-left-radius-general": 71,
  "image-border-bottom-left-radius-general-hover": 71,
  "image-border-bottom-right-radius-general": 71,
  "image-border-bottom-right-radius-general-hover": 71,
  "image-border-bottom-width-general": 3,
  "image-border-bottom-width-general-hover": 3,
  "image-border-left-width-general": 3,
  "image-border-left-width-general-hover": 3,
  "image-border-palette-color-general": 7,
  "image-border-palette-color-general-hover": 4,
  "image-border-palette-status-general": true,
  "image-border-palette-status-general-hover": true,
  "image-border-right-width-general": 3,
  "image-border-right-width-general-hover": 3,
  "image-border-status-hover": true,
  "image-border-style-general": "dashed",
  "image-border-style-general-hover": "dashed",
  "image-border-sync-radius-general": "all",
  "image-border-sync-radius-general-hover": "all",
  "image-border-sync-width-general": "all",
  "image-border-sync-width-general-hover": "all",
  "image-border-top-left-radius-general": 71,
  "image-border-top-left-radius-general-hover": 71,
  "image-border-top-right-radius-general": 71,
  "image-border-top-right-radius-general-hover": 71,
  "image-border-top-width-general": 3,
  "image-border-top-width-general-hover": 3,
  "image-border-unit-radius-general": "px",
  "image-border-unit-radius-general-hover": "px",
  "image-border-unit-width-general": "px",
  "image-border-unit-width-general-hover": "px",
  "image-box-shadow-palette-color-general": 8,
  "image-box-shadow-palette-color-general-hover": 6,
  "image-box-shadow-palette-status-general": true,
  "image-box-shadow-status-hover": false,
  "image-height-unit-general": "px",
  "image-max-height-unit-general": "px",
  "image-max-width-unit-general": "px",
  "image-min-height-unit-general": "px",
  "image-min-width-unit-general": "px",
  "image-padding-bottom-unit-general": "px",
  "image-padding-left-unit-general": "px",
  "image-padding-right-unit-general": "px",
  "image-padding-sync-general": "all",
  "image-padding-top-unit-general": "px",
  "image-size-advanced-options": false,
  "image-width-fit-content-general": false,
  "image-width-unit-general": "px",
  "imageRatio": "original",
  "imgWidth": 82,
  "isImageUrl": false,
  "letter-spacing-unit-general": "px",
  "line-height-unit-general": "px",
  "link-active-palette-color-general": 6,
  "link-active-palette-status-general": true,
  "link-hover-palette-color-general": 6,
  "link-hover-palette-status-general": true,
  "link-palette-color-general": 4,
  "link-palette-status-general": true,
  "link-visited-palette-color-general": 6,
  "link-visited-palette-status-general": true,
  "margin-bottom-unit-general": "px",
  "margin-left-unit-general": "px",
  "margin-right-unit-general": "px",
  "margin-sync-general": "all",
  "margin-top-unit-general": "px",
  "max-height-unit-general": "px",
  "max-width-unit-general": "px",
  "mediaAlt": "ball",
  "mediaHeight": 225,
  "mediaID": 22,
  "mediaURL": "http://localhost:8888/wp-content/uploads/2022/04/ball.jpg",
  "mediaWidth": 225,
  "min-height-unit-general": "px",
  "min-width-unit-general": "px",
  "padding-bottom-unit-general": "px",
  "padding-left-unit-general": "px",
  "padding-right-unit-general": "px",
  "padding-sync-general": "all",
  "padding-top-unit-general": "px",
  "palette-color-general": 3,
  "palette-status-general": true,
  "position-sync-general": "all",
  "position-unit-general": "px",
  "row-gap-unit-general": "px",
  "scroll-blur-blur-end-general": 0,
  "scroll-blur-blur-mid-general": 0,
  "scroll-blur-blur-start-general": 10,
  "scroll-blur-delay-general": 0,
  "scroll-blur-easing-general": "ease",
  "scroll-blur-preview-status-general": false,
  "scroll-blur-speed-general": 500,
  "scroll-blur-status-general": false,
  "scroll-blur-status-reverse-general": true,
  "scroll-blur-viewport-top-general": "mid",
  "scroll-fade-delay-general": 0,
  "scroll-fade-easing-general": "ease",
  "scroll-fade-opacity-end-general": 100,
  "scroll-fade-opacity-mid-general": 100,
  "scroll-fade-opacity-start-general": 0,
  "scroll-fade-preview-status-general": false,
  "scroll-fade-speed-general": 500,
  "scroll-fade-status-general": false,
  "scroll-fade-status-reverse-general": true,
  "scroll-fade-viewport-top-general": "mid",
  "scroll-horizontal-delay-general": 0,
  "scroll-horizontal-easing-general": "ease",
  "scroll-horizontal-offset-end-general": 200,
  "scroll-horizontal-offset-mid-general": 0,
  "scroll-horizontal-offset-start-general": -200,
  "scroll-horizontal-preview-status-general": false,
  "scroll-horizontal-speed-general": 500,
  "scroll-horizontal-status-general": false,
  "scroll-horizontal-status-reverse-general": true,
  "scroll-horizontal-viewport-top-general": "mid",
  "scroll-rotate-delay-general": 0,
  "scroll-rotate-easing-general": "ease",
  "scroll-rotate-preview-status-general": false,
  "scroll-rotate-rotate-end-general": 0,
  "scroll-rotate-rotate-mid-general": 0,
  "scroll-rotate-rotate-start-general": 90,
  "scroll-rotate-speed-general": 500,
  "scroll-rotate-status-general": false,
  "scroll-rotate-status-reverse-general": true,
  "scroll-rotate-viewport-top-general": "mid",
  "scroll-scale-delay-general": 0,
  "scroll-scale-easing-general": "ease",
  "scroll-scale-preview-status-general": false,
  "scroll-scale-scale-end-general": 100,
  "scroll-scale-scale-mid-general": 100,
  "scroll-scale-scale-start-general": 70,
  "scroll-scale-speed-general": 500,
  "scroll-scale-status-general": false,
  "scroll-scale-status-reverse-general": true,
  "scroll-scale-viewport-top-general": "mid",
  "scroll-vertical-delay-general": 0,
  "scroll-vertical-easing-general": "ease",
  "scroll-vertical-offset-end-general": 400,
  "scroll-vertical-offset-mid-general": 0,
  "scroll-vertical-offset-start-general": -400,
  "scroll-vertical-preview-status-general": false,
  "scroll-vertical-speed-general": 500,
  "scroll-vertical-status-general": false,
  "scroll-vertical-status-reverse-general": true,
  "scroll-vertical-viewport-top-general": "mid",
  "shortcutEffect": 0,
  "size-advanced-options": false,
  "text-alignment-general": "center",
  "text-indent-unit-general": "px",
  "transform-origin-x-unit-general": "%",
  "transform-origin-y-unit-general": "%",
  "transform-scale-x-general": 65,
  "transform-scale-y-general": 110,
  "transform-translate-x-unit-general": "%",
  "transform-translate-y-unit-general": "%",
  "width-fit-content-general": false,
  "width-unit-general": "px",
}
`;
